<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:elevation="2dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="2dp"
                android:background="@drawable/bg_icon_circle_light"
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"

                    android:contentDescription="Назад"
                    android:src="@drawable/ic_back" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="@drawable/bg_icon_circle_light"
                android:elevation="2dp"
                android:layout_marginEnd="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btnDetach"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"

                    android:contentDescription="Назад"
                    android:src="@drawable/ic_minus"
                    android:tint="@color/tag_red_text" />
            </FrameLayout>

            <TextView
                android:id="@+id/tvHeaderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_name_demo"
                android:textColor="@color/text_header"
                style="@style/TextAppearance.MedicalApp.Subheader"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBarGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:visibility="gone"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section_main_info"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:textColor="@color/text_header"
                style="@style/TextAppearance.MedicalApp.Subheader" />

            <!-- Основная информация -->
            <LinearLayout
                android:id="@+id/cvGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_form_card"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="20dp">



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvLabelFullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_full_name"
                        android:textColor="@color/text_hint"
                        style="@style/TextAppearance.MedicalApp.Description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvFullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value_full_name_demo"
                        android:textColor="@color/text_header"
                        style="@style/TextAppearance.MedicalApp.Description"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tvLabelGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_gender_value"
                        android:textColor="@color/text_hint"
                        style="@style/TextAppearance.MedicalApp.Description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value_gender_demo"
                        android:textColor="@color/text_header"
                        style="@style/TextAppearance.MedicalApp.Description"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tvLabelAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_age"
                        android:textColor="@color/text_hint"
                        style="@style/TextAppearance.MedicalApp.Description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value_age_demo"
                        android:textColor="@color/text_header"
                        style="@style/TextAppearance.MedicalApp.Description"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Аллергии -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/label_allergies"
                    android:textColor="@color/text_hint"
                    style="@style/TextAppearance.MedicalApp.Description" />

                <LinearLayout
                    android:id="@+id/layoutAllergies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">


                </LinearLayout>

                <!-- Хронические заболевания -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/label_chronic_diseases"
                    android:textColor="@color/text_hint"
                    style="@style/TextAppearance.MedicalApp.Description"
                    android:textStyle="" />

                <LinearLayout
                    android:id="@+id/layoutDiseases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">
                </LinearLayout>
            </LinearLayout>

            <!-- Заголовок рецептов -->
            <TextView
                android:id="@+id/tvPrescriptionsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/section_prescriptions"
                android:textColor="@color/black"
                style="@style/TextAppearance.MedicalApp.Subheader"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNoPrescriptions"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ничего не найдено"
                style="@style/TextAppearance.MedicalApp.Description"
                android:layout_gravity="center"/>
            <!-- Prescription 2: Warning -->
            <!-- В реальности будет RecyclerView -->
            <!-- Сейчас показываем статично для демо -->

            <ProgressBar
                android:id="@+id/progressBarPrescriptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:visibility="gone"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPrescriptions"
                android:visibility="visible"
                android:layout_width="match_parent"
                tools:listitem="@layout/item_prescription"
                tools:itemCount="3"
                android:layout_height="wrap_content"/>

            <!-- Spacer для FAB -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <!-- Список рецептов -->
            <LinearLayout
                android:id="@+id/layoutPrescriptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
    android:id="@+id/bottomBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:elevation="16dp"
    app:layout_constraintBottom_toBottomOf="parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fabCreatePrescription"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:icon="@drawable/ic_plus"
            android:text="Выписать рецепт"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="16dp"/>

        <ProgressBar
            android:id="@+id/progressBarCreatePatient"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>